add semantic path, and fix some errors